--- a/style.css
+++ b/style.css
@@ -15,8 +15,12 @@ body {
     font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.6;
+    
 }
+.bodymensi{
+    background-color: white;
 
+}
 
 /* HLAVICKA */
 
@@ -24,20 +28,264 @@ body {
     font-family: 'Raleway', serif;
 }
 
+.hlavicka{
+    background-image: url("images/island-hlavicka.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+    color:white;
+    text-align: center;
+    padding:50px;
+    
+}
+.hlavicka h1{
+    font-weight: bold;
+    font-size: 50px;
+}
+.perex{
+    font-size:15px;
+}
+.autor{
+    font-style:italic;
+
+}
 
 /* MENU */
+.menu{
+    padding:0px;
+    margin:30px;
+}
 
+.menu li{
+    display: block;
+}
 
+.menu a{
+    display:block; 
+    text-align: center;
+    text-decoration: none;
+    color:rgb(158, 158, 158);
+    padding:10px;
+    text-transform: uppercase;
+    border-bottom: solid 1px rgb(158, 158, 158);
+}
 
 
 /* OBSAH */
 
+.uvod p{
+    margin-left: 15px;
+    margin-right:15px;
+}
+.bodymensi img{
+    max-width: 100%;
+    max-height: 100%;
+    
+}
+.popisek{
+    text-align: center;
+    color: rgb(158, 158, 158);
+    margin:0;
+    }
 
+.popisek a{
+    color: rgb(158, 158, 158);
+} 
 
+.proc h2{
+    padding: 50px 0 0 0;
+    }
+.proc hr{
+    color: blue;
+    height: 5px;
+    background-color: blue;
+    width: 50px;
+    text-align: left;
+    margin-left:0px;
+
+}
+
+.proc p, h2{
+    margin-left: 15px;
+    margin-right:15px;
+}
+.proc img{
+    max-width: 100%;
+    max-height: 100%;
+}    
+
+.musitevidet h2{
+    padding: 50px 0 0 0;
+    }
+
+.musitevidet hr{
+    color: blue;
+    height: 5px;
+    background-color: blue;
+    width: 50px;
+    text-align: left;
+    margin-left:0px;
+}
+
+.musitevidet p, h2{
+    margin-left: 15px;
+    margin-right:15px;
+}
+.musitevidet img{
+    width:100%;
+}
+.posledniodstavec{
+    padding: 0 0 0 15px;
+}
 
 /* FOTOGALERIE */
 
-
-
+.galerie img{
+    width: 100%;
+}
 
 /* PATICKA */
+
+.paticka{
+    color:grey;
+    }
+.paticka a{
+    color:grey;
+   
+}    
+
+@media (min-width: 500px){
+
+    .menu{
+        padding:0px;
+        margin:20px;
+        display:flex;
+        justify-content: space-evenly;
+        border-bottom: solid 1px rgb(158, 158, 158);
+        border-top: solid 1px rgb(158, 158, 158); 
+    }
+    
+    .menu li{
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        
+    }
+    
+    .menu a{
+        height: 100%;
+        display: flex;
+        align-items: center; 
+        border-bottom: none;   
+         
+    }
+        
+    .galerie{
+        display:flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        
+    }    
+    .foto{
+        width: calc( (100% - 0px) / 2 )    }
+
+    .posledniodstavec{
+        padding: 0 0 0 20px;
+    }    
+       
+}
+
+@media (min-width: 1000px){
+
+    .hlavicka{
+        padding: 200px 400px;
+        background-size:cover;
+        position: relative;
+    }
+
+    .uvod{
+        padding: 30px 20px 50px 30px;
+    }
+
+    .musitevidet{
+        padding: 10px 20px 20px 150px;
+    }
+
+    .posledniodstavec{
+        padding: 10px 20px 20px 150px;
+    }
+
+    .bodymensi{
+        width:960px;
+        background-color: white;
+        margin: auto;
+        position: relative;
+        bottom:100px;
+    }        
+    .menu{
+        display:block;
+        border-bottom:none;
+        padding-left:20px;
+            }
+    .menu a{
+        border-bottom:solid 1px rgb(158, 158, 158);
+        text-align: left;
+        font-size: 10px;
+        
+    }
+    .pomocny{
+        display: flex;
+        }
+    
+    .galerie{
+        display:flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        
+    }    
+    .foto{
+        width: calc( (100% - 0px) / 3 )    }
+    
+        .foto{
+            overflow: hidden;
+            height: 180px   ;
+        }
+        
+        .foto img{
+            display: block;
+            transition: 0.5s;
+        }
+        
+        .foto .popisek{
+            background-color: rgba(0, 0, 0, 0.5);
+            color:white;
+            text-align: center;
+            padding: 10px 0;
+            transition:0.5s;
+        }
+        
+        .foto:hover .popisek{ /*popisek uvnitr fota na kterem je mys*/
+            transform: translate(0, -100%); /*posunout*/
+            transition: 0.5s;
+        }
+        
+        .foto:hover img {
+            transform:scale(1.3);
+            transition: 0.5s;
+        }
+        .nazev{
+            font-weight:bold;
+        }
+        
+        .copyright{
+            font-size: 11px;
+        }
+        .copyright a{
+            color:white;
+        
+        }    
+.paticka{
+    width:960px;
+    margin: auto;
+}   
+}
